--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,27 +1,25 @@
-<%@ page contentType="text/html; charset=UTF-8"  %>
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Home</title>
+	<title>Chat</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<script src="https://code.jquery.com/jquery-3.6.1.slim.min.js" integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA=" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
 	<script src="/resources/js/chat.js"></script>
 </head>
 <body>
 <div class="container">
-	<div class="col-6">
-		<label><b>채팅방</b></label>
-	</div>
+	<h1>채팅 DEMO</h1>
+	<hr/>
+	<p>간단하게 테스트 해보세요~ *^^</p>
 	<div>
-		<div id="msgArea" class="col">
+		<div id="msgArea">
 		</div>
 		<div>
 			메시지 : 
 			<input type="text" id="msg">
-			<button type="button" id="button-send" onClick="send()">전송</button>
+			<button type="button" id="button-send" onClick="sendMessage()">전송</button>
 		</div>
-	</div>
-	<div class="col-6">
 	</div>
 </div>
 </body>
